# deepspeed_practice

./: .gitignore  ds_config.json  main.py  pyproject.toml  test_pytorch.py  train.py
